Fix table cell overflow in documentation

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -35,3 +35,7 @@ dl.py.property {
     border-left: 5px solid #999;
     font-style: italic;
 }
+
+.wy-table-responsive table td, .wy-table-responsive table th {
+    white-space: inherit;
+}
